# Crumpets

./: .gitignore  README.md  catalog.yml
asm-x86/: Makefile  asm-printf.s  control-flow.s  hello.s  sprint.s  strlen.s  utils.inc  utils.s  varargsum.s
c/: Makefile  argp.c  clstty.c  glib-ghashtable.c  glib-glist.c  glib-gslist.c  gmp-integer.c  injected-app.c  injected-module.c  injected-module.h  popen.c
c++/: concepts.cpp
javascript/: nontransitivity.js
python/: metaclasses.py  pattern_matching.py
rust/libcffi-sys/: Cargo.toml  build.rs
rust/libcffi-sys/src/: lib.rs
