[package]
name = "libcffi-sys"
links = "cffi"
version = "0.1.0"
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "~0.2"
cc = { version = "~1.0", features = ["parallel"] }
pkg-config = "~0.3"

[lib]
name = "cffi"
test = true
doctest = true
doc = true
bench = false
crate-type = ["lib"]
